<resources>
    <string name="app_name">GradingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schooclass">Schulklasse</string>
    <string name="classname">Klassenname</string>
    <string name="schoolclasslist">Klassenliste</string>
    <string name="student">Student</string>
    <string name="studentlist">Student</string>
    <string name="Student">Student</string>
    <string name="Studentenliste">Studentenliste</string>
    <string name="notenliste">Notenliste</string>
    <string name="Studentsenliste">Studentenliste</string>
    <string name="pick_date">Geburtsdatum Wählen</string>
    <string name="importer">Importer</string>
</resources>
