<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_schoolclass" android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/schooclass" />
        <item android:id="@+id/nav_schoolclasslist" android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/schoolclasslist" />
        <item android:id="@+id/nav_student" android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/Student" />
        <item android:id="@+id/nav_studentlist" android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/Studentsenliste" />
        <item android:id="@+id/nav_notenliste" android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/notenliste" />
        <item android:id="@+id/nav_importer" android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/importer" />
    </group>

</menu>